--- a/src/pages/internationalization/index.jade
+++ b/src/pages/internationalization/index.jade
@@ -20,10 +20,10 @@ mixin content ()
   -
     var messages = {
       'en-US': {
-        title: 'A MPA Vue.js Project'
+        title: "A MPA Vue.js Project(Text in template can be crawled by search engines)"
       },
       'zh-CN': {
-        title: '多页面Vue.js工程'
+        title: '多页面Vue.js工程(模板中的文本可以被搜索引擎抓取)'
       }
     }[locals.locale]
   center
