arrange webpack output tree structure

--- a/src/pages/404/index.jade
+++ b/src/pages/404/index.jade
@@ -1,9 +1,9 @@
-include ./_global-vars
+include ../../common/jade/_global-vars
 
 doctype html
 html
   head
-    include ./partial/_404-500
+    include ../../common/jade/partial/_404-500
   body
     .notice
       .img404
