--- a/src/pages/internationalization-multi/zh-cn/index.styl
+++ b/src/pages/internationalization-multi/zh-cn/index.styl
@@ -1,15 +1,4 @@
-@import '../../../common/css/index.styl'
-
-html, body
-  font-family: Roboto-regular
-  height: 100%;
-  color: #333;
-  margin: 0
-  padding: 0
-  -webkit-font-smoothing: antialiased
-a
-  text-decoration: none
-  color: #333
+@import '../../../common/css/_base.styl'
 
 #root
   padding: 100px
