add lazyload demo

--- a/src/common/jade/_base.jade
+++ b/src/common/jade/_base.jade
@@ -2,7 +2,7 @@
 //- need vue,vuex,vue-router,vue-i18n, axios and moment
 include _global-vars
 include _global-mixins
-include ../compound-utils/i18n/_i18n-helper
+include ../compound-utils/i18n/index.jade
 
 doctype html
 block vars
