add login,reset-password page

--- a/src/pages/index/index.jade
+++ b/src/pages/index/index.jade
@@ -7,9 +7,69 @@ block meta
 //- block libcss
 
 block css
+  +element-ui-css()
   link(rel="stylesheet" href="/static/css/index/index.css")
+
+mixin content ()
+  .content
+    h1 Demo目录
+    -
+      var data = [
+        {
+          path: '/add-edit-search',
+          text: 'add edit search'
+        },
+        {
+          path: '/bem',
+          text: 'bem'
+        },
+        {
+          path: '/internationalization',
+          text: '[internationalization]不同语言渲染同一模板'
+        },
+        {
+          path: '/internationalization-multi',
+          text: '[internationalization]不同语言渲染不同模板'
+        },
+        {
+          path: '/lazyload',
+          text: 'lazyload'
+        },
+        {
+          path: '/mobile-layout1',
+          text: '[mobile layout]可滚动，内容随屏幕宽度缩放（屏越大看到的东西越大)'
+        },
+        {
+          path: '/mobile-layout2',
+          text: '[mobile layout]可滚动，内容随屏幕宽度缩放（屏越大看到的东西越多)'
+        },
+        {
+          path: '/mobile-layout3',
+          text: '[mobile layout]横屏全屏, 内容随屏幕宽度缩放'
+        },
+        {
+          path: '/mobile-layout4',
+          text: '[mobile layout]竖屏全屏, 内容随屏幕宽度缩放'
+        },
+        {
+          path: '/login',
+          text: 'login'
+        },
+        {
+          path: '/reset-password',
+          text: 'reset password'
+        },
+        {
+          path: 'register',
+          text: 'register'
+        },
+      ]
+    - for (var i = 0; i < data.length; i++)
+      a(href="#{data[i].path}") #{i+1}: #{data[i].text}
+      <br>
 
 block main
   #root
+    +content()
 block js
     script(src="/static/js/index/index.js")
