--- a/src/pages/reset-password/index.styl
+++ b/src/pages/reset-password/index.styl
@@ -4,7 +4,9 @@
 #root
   padding: 100px
 
-.register
-  &__tabs
-    .el-tabs__content
-      overflow: visible
+.block
+  &__element
+    font-size: 30px
+    line-height: 50px
+    &.is-warning
+      color: red
