--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -1,1 +1,12 @@
 @import '../../common/css/_base.styl'
+
+.content
+  padding: 80px
+  h1
+    font-size: 40px
+    margin-bottom: 40px
+    text-align: center
+  a
+    display inline-block
+    font-size: 20px
+    margin-top: 10px
