--- a/src/pages/register/index.jade
+++ b/src/pages/register/index.jade
@@ -8,7 +8,7 @@ block meta
 
 block css
   +element-ui-css()
-  link(rel="stylesheet" href="/static/css/bem/index.css")
+  link(rel="stylesheet" href="/static/css/register/index.css")
 
 mixin content ()
   - var b = 'block'
@@ -18,4 +18,4 @@ block main
   #root
     +content()
 block js
-    script(src="/static/js/bem/index.js")
+    script(src="/static/js/register/index.js")
