--- a/src/pages/register/index.jade
+++ b/src/pages/register/index.jade
@@ -11,9 +11,18 @@ block css
   link(rel="stylesheet" href="/static/css/register/index.css")
 
 mixin content ()
-  - var b = 'block'
-  center(class="#{b}")
-    p Register
+  - var b = 'register'
+  div(class="#{b}")
+    div(class="#{b}__others")
+      el-button(@click="handleWechatLogin") Wechat
+      el-button(@click="handleFacebookLogin") Facebook
+      | &nbsp;&nbsp;&nbsp;&nbsp;
+      a(v-if="type===TYPE_EMAIL", :href="`/register?type=${TYPE_PHONE}`") With Phone
+      a(v-else, :href="`/register?type=${TYPE_EMAIL}`") With Email
+    <br>
+    phone-register(v-if="type===TYPE_PHONE")
+    email-register(v-else)
+
 block main
   #root
     +content()
