--- a/src/pages/reset-password/index.jade
+++ b/src/pages/reset-password/index.jade
@@ -11,7 +11,7 @@ block css
   link(rel="stylesheet" href="/static/css/reset-password/index.css")
 
 mixin content ()
-  - var b = 'block'
+  - var b = 'reset-password'
   center(class="#{b}")
     el-tabs(v-model="activeTab")
       el-tab-pane(label="By phone", name="phone")
@@ -20,15 +20,25 @@ mixin content ()
             prop="phone",
             :rules="rules.phone",
           )
-            el-input.phone-input(v-model="user.phone", placeholder="Phone")
+            el-input(class="#{b}__phone-input",
+              name="phone_number",
+              type="tel",
+              auto-complete="tel",
+              v-model="user.phone",
+              placeholder="Phone")
         el-button(type="primary", @click="sendCodeByPhone") Send Verification Code
+
       el-tab-pane(label="By email", name="email")
         el-form(ref="emailForm", :model="user")
           el-form-item(
             prop="email",
             :rules="rules.email",
           )
-            el-input.email-input(v-model="user.email", placeholder="Email")
+            el-input(v-model="user.email",
+              name="email",
+              auto-complete="email",
+              type="text",
+              placeholder="Email")
         el-button(type="primary", @click="sendCodeByEmail") Send Verification Code
       <br><br>
       el-form(ref="pswdForm", :model="user")
@@ -36,12 +46,17 @@ mixin content ()
           prop="pswd",
           :rules="rules.pswd",
         )
-          password-input(v-model="user.pswd", placeholder="Password")
+          password-input(v-model="user.pswd",
+            autocomplete="new-password",
+            placeholder="Password")
         el-form-item(
-          prop="pswd2",
-          :rules="rules.pswd2",
+          prop="repswd",
+          :rules="rules.repswd",
         )
-          password-input(v-model="user.pswd2", placeholder="Confirm password")
+          password-input(v-model="user.repswd",
+            name="repswd",
+            placeholder="Re password",
+            autocomplete="new-password")
         el-form-item(
           prop="code",
         )
