--- a/src/pages/mobile-layout4/index.pug
+++ b/src/pages/mobile-layout4/index.pug
@@ -1,4 +1,4 @@
-extends ../../common/jade/_base
+extends ../../common/pug/_base
 
 block meta
   meta(name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1")
