--- a/src/pages/mobile-layout3/index.pug
+++ b/src/pages/mobile-layout3/index.pug
@@ -1,4 +1,4 @@
-extends ../../common/jade/_base
+extends ../../common/pug/_base
 
 block meta
   meta(name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1")
@@ -7,11 +7,8 @@ block meta
 mixin content ()
   div(id="container")
     div(id="banner")
-    h1(id="title") 可滚动，内容随屏幕宽度缩放（屏越大看到的东西越大）
-    div(id="content")
-      - for (var i = 0; i < 100; i++)
-        div(class="block")
-
+    h1(id="title") 横屏全屏, 内容随屏幕宽度缩放
+    div(id="orientation-warning") 横屏体验更好
 block main
   #root
     +content()
