--- a/src/pages/mobile-layout1/index.pug
+++ b/src/pages/mobile-layout1/index.pug
@@ -1,8 +1,7 @@
 extends ../../common/pug/_base
 
-block meta
+block append meta
   meta(name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1")
-  +favicon()
 
 mixin content ()
   div(id="container")
