--- a/src/pages/reset-password/index.styl
+++ b/src/pages/reset-password/index.styl
@@ -1,5 +1,5 @@
-@import '../../common/css/_base.styl'
-@import '../../common/css/_px2rem.styl'
+@import '~common/css/_base.styl'
+@import '~common/css/_px2rem.styl'
 
 #root
   padding: 100px
