add storage management demo

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -57,6 +57,10 @@ mixin content ()
           path: 'dynamic-import',
           text: 'dynamic import, async component'
         },
+        {
+          path: '/storage-management',
+          text: 'cookie,localstorage,sessionstorage management'
+        },
       ]
     - for (var i = 0; i < data.length; i++)
       a(href=data[i].path)=`${i+1}: ${data[i].text}`
