--- a/src/pages/storage-management/index.styl
+++ b/src/pages/storage-management/index.styl
@@ -1,2 +1,2 @@
-@import '~common/css/_base.styl'
-@import '~common/css/_px2rem.styl'
+@import '~mpa-common-library/css/_base.styl'
+@import '~mpa-common-library/css/_px2rem.styl'
