--- a/src/common/utils/i18n/index.pug
+++ b/src/common/utils/i18n/index.pug
@@ -1,4 +1,4 @@
 mixin i18nMixin()
   script.
     window.$LB = window.$LB || {};
-    window.$LB.locale = "<%= locale %>";
+    window.$LB.locale = "#{ locale }"
